removed policy file and updated name for job scheduler
Signed-off-by: Joanne Wang <jowg@amazon.com>