@@ -97,7 +97,7 @@ public class SecurityAnalyticsPlugin extends Plugin implements ActionPlugin, Map
     public static final String CORRELATION_RULES_BASE_URI = PLUGINS_BASE_URI + "/correlation/rules";
 
     public static final String CUSTOM_LOG_TYPE_URI = PLUGINS_BASE_URI + "/logtype";
-    public static final String JOB_INDEX_NAME = ".opensearch-sap-threatintel-job";
+    public static final String JOB_INDEX_NAME = ".opensearch-sap-threat-intel-job";
     public static final Map<String, Object> TIF_JOB_INDEX_SETTING = Map.of("index.number_of_shards", 1, "index.auto_expand_replicas", "0-all", "index.hidden", true);
 
     private CorrelationRuleIndices correlationRuleIndices;
@@ -123,10 +123,8 @@ public class SecurityAnalyticsPlugin extends Plugin implements ActionPlugin, Map
     private LogTypeService logTypeService;
     @Override
     public Collection<SystemIndexDescriptor> getSystemIndexDescriptors(Settings settings){
-        return List.of(new SystemIndexDescriptor(THREAT_INTEL_DATA_INDEX_NAME_PREFIX, "System index used for threat intel data"));
+        return Collections.singletonList(new SystemIndexDescriptor(THREAT_INTEL_DATA_INDEX_NAME_PREFIX, "System index used for threat intel data"));
     }
-
-
 
     @Override
     public Collection<Object> createComponents(Client client,
@@ -209,7 +207,7 @@ public class SecurityAnalyticsPlugin extends Plugin implements ActionPlugin, Map
 
     @Override
     public String getJobType() {
-        return "opensearch_sap_threatintel_job";
+        return "opensearch_sap_threat_intel_job";
     }
 
     @Override
